# rustbot

./: .env  .env.example  .gitignore  Cargo.toml
src/: main.rs
src/commands/: command.rs  message_leaderboard.rs  message_lookup.rs  mod.rs  set_guild.rs  verify_command.rs
src/features/: message_counting.rs  mod.rs
