[package]
name = "stuff"
version = "0.1.0"
authors = ["Lulonaut"]
edition = "2018"

[dependencies]
serenity = { version = "0.10.8", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread", "rt"] }
dotenv = "0.15.0"
reqwest = "0.11.3"
lazy_static = "1.4.0"
serde_json = "1.0.64"
string-builder = "0.2.0"
redis = "0.20.1"